modifié certains 'alt'

--- a/evenements.html
+++ b/evenements.html
@@ -13,7 +13,7 @@
 <body>
   <div class="wraper">
     <header>
-    <div class="logo"><img src="imgs/logo.png" alt="image du Logo de Monsieur Couturier" /></div>
+    <div class="logo"><img src="imgs/logo.png" alt="Logo de Monsieur Couturier" /></div>
     <div class="title">Evénements</div>
 
     <nav class="nav_main">
