--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="wraper">
       <header>
-        <div class="logo"><img src="imgs/logo.png" alt="image du logo de Monsieur Couturier" /></div>
+        <div class="logo"><img src="imgs/logo.png" alt="Logo de Monsieur Couturier" /></div>
 
         <div class="title">Atelier de couture</div>
 
@@ -59,13 +59,13 @@
             <p>Retrouvez nos modèles DIY, patrons et tutoriels en ligne</p>
           </div>
           <div class="photo_home_page">
-            <img src="imgs/photo_home_page.png" alt="photo de couturière" />
+            <img src="imgs/photo_home_page.png" alt="photo de couturière de dos" />
           </div>
         </section>
 
         <section class="home_page_section2" >
         <div class="calendrie_home_page">
-          <a href="#"><img src="imgs/calendrie.png" alt="" /></a>
+          <a href="#"><img src="imgs/calendrie.png" alt="icône de calendrier" /></a>
         </div>
         <div class="home_page_evenement">
         <div class="event_venir">
