--- a/realisations.html
+++ b/realisations.html
@@ -13,7 +13,7 @@
 <body>
     <div class="wraper">
         <header>
-            <div class="logo"><img src="imgs/logo.png" alt="image du Logo de Monsieur Couturier" /></div>
+            <div class="logo"><img src="imgs/logo.png" alt="Logo de Monsieur Couturier" /></div>
 
             <div class="title">Nos réalisations</div>
 
@@ -101,12 +101,12 @@
                     <div class="fb">
                         <div class="likes">
                             <img src="https://api.iconify.design/ant-design/like-outlined.svg?color=%23085d85"
-                                alt="icône Like">
+                                alt="icône J'aime">
                             <span>&nbsp;17</span>
                         </div>
                         <div class="dislikes">
                             <img src="https://api.iconify.design/ant-design/dislike-outlined.svg?color=%23085d85"
-                                alt="icône Dislike">
+                                alt="icône Je n'aime pas">
                             <span>2&nbsp;</span>
                         </div>
                     </div>
@@ -133,12 +133,12 @@
                     <div class="fb">
                         <div class="likes">
                             <img src="https://api.iconify.design/ant-design/like-outlined.svg?color=%23085d85"
-                                alt="icône Like">
+                                alt="icône J'aime">
                             <span>&nbsp;88</span>
                         </div>
                         <div class="dislikes">
                             <img src="https://api.iconify.design/ant-design/dislike-outlined.svg?color=%23085d85"
-                                alt="icône Dislike">
+                                alt="icône Je n'aime pas">
                             <span>1&nbsp;</span>
                         </div>
                     </div>
@@ -164,12 +164,12 @@
                     <div class="fb">
                         <div class="likes">
                             <img src="https://api.iconify.design/ant-design/like-outlined.svg?color=%23085d85"
-                                alt="icône Like">
+                                alt="icône J'aime">
                             <span>&nbsp;127</span>
                         </div>
                         <div class="dislikes">
                             <img src="https://api.iconify.design/ant-design/dislike-outlined.svg?color=%23085d85"
-                                alt="icône Dislike">
+                                alt="icône Je n'aime pas">
                             <span>23&nbsp;</span>
                         </div>
                     </div>
@@ -195,12 +195,12 @@
                     <div class="fb">
                         <div class="likes">
                             <img src="https://api.iconify.design/ant-design/like-outlined.svg?color=%23085d85"
-                                alt="icône Like">
+                                alt="icône J'aime">
                             <span>&nbsp;54</span>
                         </div>
                         <div class="dislikes">
                             <img src="https://api.iconify.design/ant-design/dislike-outlined.svg?color=%23085d85"
-                                alt="icône Dislike">
+                                alt="icône Je n'aime pas">
                             <span>0&nbsp;</span>
                         </div>
                     </div>
@@ -226,12 +226,12 @@
                     <div class="fb">
                         <div class="likes">
                             <img src="https://api.iconify.design/ant-design/like-outlined.svg?color=%23085d85"
-                                alt="icône Like">
+                                alt="icône J'aime">
                             <span>&nbsp;49</span>
                         </div>
                         <div class="dislikes">
                             <img src="https://api.iconify.design/ant-design/dislike-outlined.svg?color=%23085d85"
-                                alt="icône Dislike">
+                                alt="icône Je n'aime pas">
                             <span>1&nbsp;</span>
                         </div>
                     </div>
@@ -257,12 +257,12 @@
                     <div class="fb">
                         <div class="likes">
                             <img src="https://api.iconify.design/ant-design/like-outlined.svg?color=%23085d85"
-                                alt="icône Like">
+                                alt="icône J'aime">
                             <span>&nbsp;99</span>
                         </div>
                         <div class="dislikes">
                             <img src="https://api.iconify.design/ant-design/dislike-outlined.svg?color=%23085d85"
-                                alt="icône Dislike">
+                                alt="icône Je n'aime pas">
                             <span>17&nbsp;</span>
                         </div>
                     </div>
@@ -288,12 +288,12 @@
                     <div class="fb">
                         <div class="likes">
                             <img src="https://api.iconify.design/ant-design/like-outlined.svg?color=%23085d85"
-                                alt="icône Like">
+                                alt="icône J'aime">
                             <span>&nbsp;97</span>
                         </div>
                         <div class="dislikes">
                             <img src="https://api.iconify.design/ant-design/dislike-outlined.svg?color=%23085d85"
-                                alt="icône Dislike">
+                                alt="icône Je n'aime pas">
                             <span>5&nbsp;</span>
                         </div>
                     </div>
@@ -320,12 +320,12 @@
                     <div class="fb">
                         <div class="likes">
                             <img src="https://api.iconify.design/ant-design/like-outlined.svg?color=%23085d85"
-                                alt="icône Like">
+                                alt="icône J'aime">
                             <span>&nbsp;99</span>
                         </div>
                         <div class="dislikes">
                             <img src="https://api.iconify.design/ant-design/dislike-outlined.svg?color=%23085d85"
-                                alt="icône Dislike">
+                                alt="icône Je n'aime pas">
                             <span>17&nbsp;</span>
                         </div>
                     </div>
