--- a/equipe.html
+++ b/equipe.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wraper">
       <header>
-        <div class="logo"><img src="imgs/logo.png" alt="image du Logo de Monsieur Couturier" /></div>
+        <div class="logo"><img src="imgs/logo.png" alt="Logo de Monsieur Couturier" /></div>
 
         <div class="title">Qui sommes nous ?</div>
 
