--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wraper">
       <header>
-        <div class="logo"><img src="imgs/logo.png" alt="Image du Logo" /></div>
+        <div class="logo"><img src="imgs/logo.png" alt="Logo de Monsieur Couturier" /></div>
 
         <div class="title">Contact</div>
 
