responsive 75% ok, quelques modifs de txt

--- a/equipe.html
+++ b/equipe.html
@@ -75,8 +75,8 @@
             <h3>Mary</h3>
             <p class="text_equipe">
               Assistante maternelle de profession, elle a toujours développé ces
-              talents de couturière auprès de compagnies de théatres et danse
-              locales pour galas de fin d’années. A la retraite depuis 2018 elle
+              talents de couturière auprès de compagnies de théâtres et danse
+              locales pour des galas de fin d’années. Retraitée depuis 2018 elle
               a décidé de créer enfin son club pour partager ses créations.
             </p>
           </div>
