--- a/realisations.html
+++ b/realisations.html
@@ -89,8 +89,8 @@
                         <img class="fond_img" src="imgs/fond_lapin_crochet.png" alt="photo de lapin en tricot">
                     </div>
                     <div class="description">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, eius necessitatibus earum
-                        repudiandae adipisci ratione.
+                        Lorem ipsum, dolor sit amet adipisicing elit. Libero, eius earum
+                         adipisci ratione.
                     </div>
                 </div>
                 <div class="card_footer">
@@ -121,7 +121,7 @@
                         <img class="fond_img" src="imgs/fond_noel.jpg" alt="costumes_de_Noël">
                     </div>
                     <div class="description">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, eius necessitatibus earum
+                        Lorem ipsum, dolor sit amet adipisicing elit. Libero, eius earum
                         repudiandae adipisci ratione.
                     </div>
                 </div>
