responsive page evts

--- a/evenements.html
+++ b/evenements.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
@@ -97,7 +97,7 @@
         <div class="bandeau_card_paq"></div>
         <!-- <img src="imgs/bandeauPaques1.jpg" alt="bandeau Paques" title="Psssssst !!!" class="bandeau_card"> -->
         <h2 class="title_card">Décorations de Pâques</h2>
-        <h5></h5>
+        <h5>Du 7 au 16 avril 2022</h5>
         <div class="images">
           <img class="illustr" src="imgs/lapinCrochet.jpg" alt="photo de lapin en crochet">
           <img class="rond" src="imgs/pouleCrochet.jpg" alt="photo de poule en crochet">
