arrangements de mmise en page

--- a/evenements.html
+++ b/evenements.html
@@ -60,7 +60,7 @@
           title="Oh, la jolie guirlande !"> -->
 
         <h2 class="title_card">Créations de Noël</h2>
-        <h5>Du 5 au 23 décembre.</h5>
+        <h5>Du 5 au 23 décembre.</h5><br>
         <p>Retrouvez-nous dans cet atelier annuel thématique,
           Redécorez votre intérieur, préparez vos cadeaux, fabriquez votre sapin de Noël unique,
           Calendrier de l'avent, guirlandes, cette année encore nous regorgeons d'inspiration
@@ -79,7 +79,7 @@
         <div class="bandeau_card_hallw"></div>
         <!-- <img src="imgs/HeaderHalloween1.jpg" alt="bandeau Halloween" title="Hahahaha !!!" class="bandeau_card"> -->
         <h2 class="title_card">Costumes de Halloween</h2>
-        <h5>Du 24 au 30 octobre 2022</h5>
+        <h5>Du 24 au 30 octobre 2022</h5><br>
         <div class="images">
           <img class="illustr" src="imgs/capeHalloween.jpg" alt="photo de cape de vampire">
           <img class="rond" src="imgs/costumeCitrouille1.jpg" alt="costume de citrouille pour bébé">
@@ -97,7 +97,7 @@
         <div class="bandeau_card_paq"></div>
         <!-- <img src="imgs/bandeauPaques1.jpg" alt="bandeau Paques" title="Psssssst !!!" class="bandeau_card"> -->
         <h2 class="title_card">Décorations de Pâques</h2>
-        <h5>Du 7 au 16 avril 2022</h5>
+        <h5>Du 7 au 16 avril 2022</h5><br>
         <div class="images">
           <img class="illustr" src="imgs/lapinCrochet.jpg" alt="photo de lapin en crochet">
           <img class="rond" src="imgs/pouleCrochet.jpg" alt="photo de poule en crochet">
