corrections mise en page, responsive ok pour realisations et evts

--- a/equipe.html
+++ b/equipe.html
@@ -69,7 +69,7 @@
         </section>
 
         <section class="section3_equipe">
-          <h2>Les crèateurs</h2>
+          <h2>Les créateurs</h2>
           <div class="createur">
             <img src="imgs/photo_equipe_Marry.png" alt="Photo de Mary" />
             <h3>Mary</h3>
