--- a/realisations.html
+++ b/realisations.html
@@ -36,8 +36,16 @@
             </nav>
             <nav class="nav_menu">
                 <div class="btn_nav">
-                    <a href="#">Menu</a>
-                </div>
+                    <a href="#" class="dropbtn">Menu</a>
+                  </div>  
+                    <div class="dropdown-content">
+                      <a href="index.html">Accueil</a>
+                      <a href="realisations.html">Réalisations</a>
+                      <a href="#">Planning</a>
+                      <a href="equipe.html">L'équipe</a>
+                      <a href="contact.html">Contact</a>
+                      
+                    </div>
             </nav>
 
         </header>
@@ -122,7 +130,7 @@
                     </div>
                     <div class="description">
                         Lorem ipsum, dolor sit amet adipisicing elit. Libero, eius earum
-                        repudiandae adipisci ratione.
+                         ratione.
                     </div>
                 </div>
                 <div class="card_footer">
@@ -152,7 +160,7 @@
                         <img class="fond_img" src="imgs/fond_gants.png" alt="photo de gants en crochet">
                     </div>
                     <div class="description">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, eius necessitatibus earum
+                        Lorem ipsum, dolor sit  elit. Libero, eius necessitatibus earum
                         repudiandae adipisci ratione.
                     </div>
                 </div>
@@ -183,8 +191,7 @@
                         <img class="fond_img" src="imgs/fond_tricot.jpg" alt="photo de tricot">
                     </div>
                     <div class="description">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, eius necessitatibus earum
-                        repudiandae adipisci ratione.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, adipisci ratione.
                     </div>
                 </div>
                 <div class="card_footer">
@@ -214,7 +221,7 @@
                         <img class="fond_img" src="imgs/fond_gants.png" alt="photo de gants en crochet">
                     </div>
                     <div class="description">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, eius necessitatibus earum
+                        Lorem ipsum, dolor elit. Libero, eius necessitatibus earum
                         repudiandae adipisci ratione.
                     </div>
                 </div>
@@ -245,7 +252,7 @@
                         <img class="fond_img" src="imgs/fond_noel.jpg" alt="costumes_de_Noël">
                     </div>
                     <div class="description">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, eius necessitatibus earum
+                        Lorem ipsum, dolor sit amet consectetur earum
                         repudiandae adipisci ratione.
                     </div>
                 </div>
@@ -276,7 +283,7 @@
                         <img class="fond_img" src="imgs/fond_lapin_crochet.png" alt="lapin tricoté">
                     </div>
                     <div class="description">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, eius necessitatibus earum
+                        Lorem ipsum, dolor sit necessitatibus earum
                         repudiandae adipisci ratione.
                     </div>
                 </div>
@@ -308,8 +315,7 @@
                         <img class="fond_img" src="imgs/fond_noel.jpg" alt="costumes_de_Noël">
                     </div>
                     <div class="description">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, eius necessitatibus earum
-                        repudiandae adipisci ratione.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, ratione.
                     </div>
                 </div>
                 <div class="card_footer">
