--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
           </article>
 
           <article class="article4_contact">
-            <h2>Pour s’inscrire en ligne à un atelier :</h2>
+            <h2>S’inscrire en ligne à un atelier :</h2>
             <a href="#">Planning</a>
           </article>
         </section>
