ajoute lien pour logo

--- a/planning.html
+++ b/planning.html
@@ -14,9 +14,9 @@
 <body>
     <main>
         <header>
-            <div class="logo"><img src="imgs/logo.png" alt="Logo de Monsieur Couturier" /></div>
+            <div class="logo"><a href="index.html"><img src="imgs/logo.png" alt="Logo de Monsieur Couturier" /></a></div>
 
-            <div class="title">Contact</div>
+            <div class="title">Planning</div>
 
             <nav class="nav_main">
                 <div class="btn_nav">
@@ -26,7 +26,7 @@
                     <a href="realisations.html">Réalisations</a>
                 </div>
                 <div class="btn_nav">
-                    <a href="#">Planning</a>
+                    <a href="planning.html">Planning</a>
                 </div>
                 <div class="btn_nav">
                     <a href="equipe.html">L'équipe</a>
@@ -41,8 +41,8 @@
                 </div>
                 <div class="dropdown-content">
                     <a href="index.html">Accueil</a>
-                    <a href="#">Réalisations</a>
-                    <a href="#">Planning</a>
+                    <a href="realisations.html">Réalisations</a>
+                    <a href="planning.html">Planning</a>
                     ' <a href="equipe.html">L'équipe</a>
                     ' <a href="contact.html">Contact</a>
                 </div>
