--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wraper">
       <header>
-        <div class="logo"><img src="imgs/logo.png" alt="Logo de Monsieur Couturier" /></div>
+        <div class="logo"><a href="index.html"><img src="imgs/logo.png" alt="Logo de Monsieur Couturier" /></a></div>
 
         <div class="title">Contact</div>
 
@@ -23,7 +23,7 @@
             <a href="realisations.html">Réalisations</a>
           </div>
           <div class="btn_nav">
-            <a href="#">Planning</a>
+            <a href="planning.html">Planning</a>
           </div>
           <div class="btn_nav">
             <a href="equipe.html">L'équipe</a>
@@ -38,8 +38,8 @@
           </div>
           <div class="dropdown-content">
             <a href="index.html">Accueil</a>
-            <a href="#">Réalisations</a>
-            <a href="#">Planning</a>
+            <a href="realisations.html">Réalisations</a>
+            <a href="planning.html">Planning</a>
 '            <a href="equipe.html">L'équipe</a>
 '            <a href="contact.html">Contact</a>
           </div>
@@ -70,7 +70,7 @@
 
           <article class="article4_contact">
             <h2>S’inscrire en ligne à un atelier :</h2>
-            <a href="#">Planning</a>
+            <a href="planning.html">Planning</a>
           </article>
         </section>
         <section class="section2_contact">
