--- a/equipe.html
+++ b/equipe.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wraper">
       <header>
-        <div class="logo"><img src="imgs/logo.png" alt="Logo de Monsieur Couturier" /></div>
+        <div class="logo"><a href="index.html"><img src="imgs/logo.png" alt="Logo de Monsieur Couturier" /></a></div>
 
         <div class="title">Qui sommes nous?</div>
 
@@ -23,7 +23,7 @@
             <a href="realisations.html">Réalisations</a>
           </div>
           <div class="btn_nav">
-            <a href="#">Planning</a>
+            <a href="planning.html">Planning</a>
           </div>
           <div class="btn_nav">
             <a href="equipe.html">L'équipe</a>
@@ -38,8 +38,8 @@
           </div>
           <div class="dropdown-content">
             <a href="index.html">Accueil</a>
-            <a href="#">Realisations</a>
-            <a href="#">Planning</a>
+            <a href="realisations.html">Realisations</a>
+            <a href="planning.html">Planning</a>
             <a href="equipe.html">Equipe</a>
             <a href="contact.html">Contact</a>
           </div>
