--- a/evenements.html
+++ b/evenements.html
@@ -13,7 +13,7 @@
 <body>
   <div class="wraper">
     <header>
-    <div class="logo"><img src="imgs/logo.png" alt="Logo de Monsieur Couturier" /></div>
+      <div class="logo"><a href="index.html"><img src="imgs/logo.png" alt="Logo de Monsieur Couturier" /></a></div>
     <div class="title">Evénements</div>
 
     <nav class="nav_main">
@@ -24,7 +24,7 @@
         <a href="realisations.html">Réalisations</a>
       </div>
       <div class="btn_nav">
-        <a href="#">Planning</a>
+        <a href="planning.html">Planning</a>
       </div>
       <div class="btn_nav">
         <a href="equipe.html">L'équipe</a>
@@ -40,7 +40,7 @@
         <div class="dropdown-content">
           <a href="index.html">Accueil</a>
           <a href="realisations.html">Réalisations</a>
-          <a href="#">Planning</a>
+          <a href="planning.html">Planning</a>
           <a href="equipe.html">Equipe</a>
           <a href="contact.html">Contact</a>
           
