--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="wraper">
       <header>
-        <div class="logo"><img src="imgs/logo.png" alt="Logo de Monsieur Couturier" /></div>
+        <div class="logo"><a href="index.html"><img src="imgs/logo.png" alt="Logo de Monsieur Couturier" /></a></div>
 
         <div class="title">Atelier de couture</div>
 
@@ -24,7 +24,7 @@
             <a href="realisations.html">Réalisations</a>
           </div>
           <div class="btn_nav">
-            <a href="#">Planning</a>
+            <a href="planning.html">Planning</a>
           </div>
           <div class="btn_nav">
             <a href="equipe.html">L'équipe</a>
@@ -40,7 +40,7 @@
             <div class="dropdown-content">
               <a href="index.html">Accueil</a>
               <a href="realisations.html">Réalisations</a>
-              <a href="#">Planning</a>
+              <a href="planning.html">Planning</a>
               <a href="equipe.html">L'équipe</a>
               <a href="contact.html">Contact</a>
               
@@ -66,7 +66,7 @@
 
         <section class="home_page_section2" >
         <div class="calendrie_home_page">
-          <a href="#"><img src="imgs/calendrie.png" alt="icône de calendrier" /></a>
+          <a href="planning.html"><img src="imgs/calendrie.png" alt="icône de calendrier" /></a>
         </div>
         <div class="home_page_evenement">
         <div class="event_venir">
