modifications couleurs, polices

--- a/evenements.html
+++ b/evenements.html
@@ -67,7 +67,7 @@
           pour faire de Noël une fête à chaque fois renouvelée.</p>
         <div class="boutons">
           <button>places restantes : 6</button>
-          <button>Inscription</button>
+          <a href="planning.html#form" class="int_link">Inscription</a>
         </div>
       </div>
 
