--- a/realisations.html
+++ b/realisations.html
@@ -93,8 +93,8 @@
             <div class="card tricot fond_bleu">
                 <h2 class="titre_card">Le lapin en tricot</h2>
                 <div class="container">
-                    <div>
-                        <img class="fond_img" src="imgs/fond_lapin_crochet.png" alt="photo de lapin en tricot">
+                    <div><a href="le_lapin.html">
+                        <img class="fond_img" src="imgs/fond_lapin_crochet.png" alt="photo de lapin en tricot"></a>
                     </div>
                     <div class="description">
                         Lorem ipsum, dolor sit amet adipisicing elit. Libero, eius earum
