--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section class="home_page_section1">
           <div class="text_home_page">
             <p>
-              <span class="first_words"> Depuis 2016,</span> l’atelier de Monsieur Couturier propose des cours et des
+              <span class="first_words"> Depuis 2016,</span><br> l’atelier de Monsieur Couturier propose des cours et des
               ateliers collectifs de couture, tricot, crochet avec Mary et Mark.
             </p>
             <br/>
