--- a/planning.html
+++ b/planning.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Planning et Inscription</title>
     <link rel="stylesheet" href="style_origin.css">
     <link rel="stylesheet" href="style_planning.css">
 
@@ -130,7 +130,7 @@
             </div>
             <!----------------------------Table End------------------------------------------>
 
-            <div class="form">
+            <div class="form" id="form">
                 <Legend>Formulaire d'inscription</Legend>
                 <form action="#">
 
