--- a/archives-Paques.html
+++ b/archives-Paques.html
@@ -50,7 +50,7 @@
 
     <main>
         <div class="title1">
-            <h1>Realisations de la Paques</h1>
+            <h1>Réalisations de Pâques</h1>
         </div>
 
         <!-------------------------- First section ----------------------------->
