--- a/planning.html
+++ b/planning.html
@@ -140,17 +140,17 @@
                     </div>
                     <br>
 
-                    <div> <label for="Prenom">Prenom : </label>
+                    <div> <label for="Prenom">Prénom : </label>
                         <input name="prenom" id="prenom" type="text">
                     </div>
                     <br>
 
-                    <div><Label for="email">Email : </Label>
+                    <div><Label for="email">E-mail : </Label>
                         <input name="email" id="email" type="email">
                     </div>
                     <br>
 
-                    <div><label for="tel">Telephone : </label>
+                    <div><label for="tel">Téléphone : </label>
                         <input name="tel" id="tel" type="tel">
                     </div>
                     <br>
@@ -162,13 +162,13 @@
             <div class="aside_right">
 
                 <div class="ar1">
-                    <p>Nos prochains evenements</p>
+                    <p>Nos prochains événements</p>
                     <br>
-                    <button class="event_next">Du 5 au 23 decembre: Creations de Noel</button>
+                    <a href="evenements.html#event_noel"><button class="event_next">Du 5 au 23 decembre: Créations de Noël</button></a>
                 </div>
                 <div class="ar2">
-                    <p>Nos evenements passes</p>
-                    <button class="event_last">Costumes d'Halloween</button>
+                    <p>Nos événements passés</p>
+                    <a href="evenements.html#event_hallwn"><button class="event_last">Costumes d'Halloween</button></a>
                 </div>
             </div>
             <!------------------Version mobile-------------------------------------->
