--- a/realisations.html
+++ b/realisations.html
@@ -121,12 +121,12 @@
                 </div>
 
             </div>
-            <!-- ************************************CARTE COSTUMES DE NOEL************************* -->
+            <!-- ************************************CARTE DECO DE PAQUES************************* -->
             <div class="card couture fond_bleu">
-                <h2 class="titre_card">Costumes de Noël</h2>
+                <h2 class="titre_card">Décorations de Pâques</h2>
                 <div class="container">
-                    <div>
-                        <img class="fond_img" src="imgs/fond_noel.jpg" alt="costumes_de_Noël">
+                    <div><a href="archives-Paques.html">
+                        <img class="fond_img" src="imgs/bandeau_paques.png" alt="deco de paques"></a>
                     </div>
                     <div class="description">
                         Lorem ipsum, dolor sit amet adipisicing elit. Libero, eius earum
@@ -136,7 +136,7 @@
                 <div class="card_footer">
                     <div class="tags">
                         <button class="tag_1">Couture</button>
-                        <button class="tag_2">Noël</button>
+                        <button class="tag_2">Pâques</button>
                     </div>
                     <div class="fb">
                         <div class="likes">
