modifs Dima planning

--- a/archives-Paques.html
+++ b/archives-Paques.html
@@ -59,7 +59,8 @@
         <section class="first_section">
             <h2 class="title2">Paques tutos</h2>
 
-            <div><img class="img1" src="imgs/tuto crochet 1.png" alt="">
+            <div class="first_sec_1">
+                <img class="img1" src="imgs/tuto crochet 1.png" alt="">
                 <img class="img2" src="imgs/tuto crochet 2.png" alt="">
                 <img class="img3" src="imgs/tuto crochet 3.png" alt="">
                 <p class="s1_text1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
@@ -70,7 +71,7 @@
                     typesetting
                     industry. </p>
             </div>
-            <div><img class="img4" src="imgs/tuto crochet 4.png" alt="">
+            <div class="first_sec_2"><img class="img4" src="imgs/tuto crochet 4.png" alt="">
                 <img class="img5" src="imgs/tuto crochet 5.png" alt="">
                 <p class="s1_text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolore possimus
                     aliquid
@@ -203,7 +204,7 @@
 
                 <div>
                     <p>
-                    <p class="name"> -Mark </p>
+                    <p class="name"> -Mark  </p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas dolorum deserunt est
                     provident
                     sapiente necessitatibus voluptatibus veniam asperiores assumenda fugiat</p>
@@ -221,7 +222,8 @@
                 <div>
                     <p>
                     <p class="name"> -Vlad </p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.provident
+                    sapiente necessitatibus voluptatibus veniam asperiores assum </p>
                 </div>
             </div>
         </section>
