--- a/archives-Paques.html
+++ b/archives-Paques.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Archives-Pâques</title>
     <link rel="stylesheet" href="style_origin.css">
     <link rel="stylesheet" href="Archives-Paques.css">
 </head>
@@ -15,7 +15,7 @@
     <header>
         <div class="logo"><a href="index.html"><img src="imgs/logo.png" alt="Logo de Monsieur Couturier" /></a></div>
 
-        <div class="title">Paques</div>
+        <div class="title">Pâques</div>
 
         <nav class="nav_main">
             <div class="btn_nav">
@@ -57,7 +57,7 @@
 
 
         <section class="first_section">
-            <h2 class="title2">Paques tutos</h2>
+            <h2 class="title2">Pâques, le tutoriel</h2>
 
             <div class="first_sec_1">
                 <img class="img1" src="imgs/tuto crochet 1.png" alt="">
@@ -106,7 +106,7 @@
                 </div>
 
                 <label class="next" for="item2"><img src="imgs/skip-track.png" alt=""></label>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit sit amet consectetur adipisicing elit.</p>
+                <p class="description" >Lorem ipsum dolor, sit amet consectetur adipisicing elit sit amet consectetur adipisicing elit.</p>
             </div>
 
             <div id="card_id2" class="card_item">
@@ -126,7 +126,7 @@
                 </div>
 
                 <label class="next" for="item3"><img src="imgs/skip-track.png" alt=""></label>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <p class="description" >Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             </div>
 
             <div id="card_id3" class="card_item">
@@ -145,7 +145,7 @@
                 </div>
 
                 <label class="next" for="item4"><img src="imgs/skip-track.png" alt=""></label>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <p class="description" >Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             </div>
 
             <div id="card_id4" class="card_item">
@@ -164,7 +164,7 @@
                 </div>
 
                 <label class="next" for="item5"><img src="imgs/skip-track.png" alt=""></label>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <p class="description" >Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             </div>
 
             <div id="card_id5" class="card_item">
@@ -183,17 +183,15 @@
                 </div>
 
                 <label class="next" for="item1"><img src="imgs/skip-track.png" alt=""></label>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <p class="description" >Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             </div>
-
-
         </div>
         <!----------------------- Carusel  end ---------------------------->
 
         <!------------------------ Second section---------------- -->
 
         <section class="second_section">
-            <h2 class="title3">Realisations de nos members</h2>
+            <h2 class="title3">Réalisations de nos membres</h2>
 
             <div class="sec2_carte" id="sec2_carte1">
 
@@ -202,9 +200,9 @@
                     <img class="mv_profil" src="imgs/Ellipse 4.png" alt="">
                 </div>
 
-                <div>
-                    <p>
+                <div> 
                     <p class="name"> -Mark  </p>
+                    <p class="description"</p> >
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas dolorum deserunt est
                     provident
                     sapiente necessitatibus voluptatibus veniam asperiores assumenda fugiat</p>
@@ -220,8 +218,8 @@
                 </div>
 
                 <div>
-                    <p>
                     <p class="name"> -Vlad </p>
+                    <p class="description" >
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.provident
                     sapiente necessitatibus voluptatibus veniam asperiores assum </p>
                 </div>
