--- a/planning.html
+++ b/planning.html
@@ -160,11 +160,11 @@
                 <div class="ar1">
                     <p>Nos prochains événements</p>
                     <br>
-                    <a href="evenements.html#event_noel"><button class="event_next">Du 5 au 23 decembre: Créations de Noël</button></a>
+                    <a href="evenements.html#event_noel" class="event_next">Du 5 au 23 decembre: Créations de Noël</a>
                 </div>
                 <div class="ar2">
                     <p>Nos événements passés</p>
-                    <a href="evenements.html#event_hallwn"><button class="event_last">Costumes d'Halloween</button></a>
+                    <a href="evenements.html#event_hallwn"class="event_last">Costumes d'Halloween</a>
                 </div>
             </div>
             <!------------------Version mobile-------------------------------------->
