--- a/realisations.html
+++ b/realisations.html
@@ -93,7 +93,7 @@
             <div class="card tricot fond_bleu">
                 <h2 class="titre_card">Le lapin en tricot</h2>
                 <div class="container">
-                    <div><a href="le_lapin.html">
+                    <a href="le_lapin.html"><div>
                         <img class="fond_img" src="imgs/fond_lapin_crochet.png" alt="photo de lapin en tricot"></a>
                     </div>
                     <div class="description">
@@ -125,7 +125,7 @@
             <div class="card couture fond_bleu">
                 <h2 class="titre_card">Décorations de Pâques</h2>
                 <div class="container">
-                    <div><a href="archives-Paques.html">
+                    <a href="archives-Paques.html"><div>
                         <img class="fond_img" src="imgs/bandeau_paques.png" alt="deco de paques"></a>
                     </div>
                     <div class="description">
@@ -156,8 +156,8 @@
             <div class="card crochet fond_bleu">
                 <h2 class="titre_card">Les gants</h2>
                 <div class="container">
-                    <div>
-                        <img class="fond_img" src="imgs/fond_gants.png" alt="photo de gants en crochet">
+                    <a href="le_lapin.html"><div>
+                        <img class="fond_img" src="imgs/fond_gants.png" alt="photo de gants en crochet"></a>
                     </div>
                     <div class="description">
                         Lorem ipsum, dolor sit  elit. Libero, eius necessitatibus earum
@@ -187,8 +187,8 @@
             <div class="card tricot fond_bleu">
                 <h2 class="titre_card">Robe de printemps</h2>
                 <div class="container">
-                    <div>
-                        <img class="fond_img" src="imgs/fond_tricot.jpg" alt="photo de tricot">
+                    <a href="archives-Paques.html"><div>
+                        <img class="fond_img" src="imgs/fond_tricot.jpg" alt="photo de tricot"></a>
                     </div>
                     <div class="description">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, adipisci ratione.
@@ -217,8 +217,8 @@
             <div class="card crochet fond_bleu">
                 <h2 class="titre_card">Encore du crochet</h2>
                 <div class="container">
-                    <div>
-                        <img class="fond_img" src="imgs/fond_gants.png" alt="photo de gants en crochet">
+                    <a href="le_lapin.html"><div>
+                        <img class="fond_img" src="imgs/fond_gants.png" alt="photo de gants en crochet"></a>
                     </div>
                     <div class="description">
                         Lorem ipsum, dolor elit. Libero, eius necessitatibus earum
@@ -248,8 +248,8 @@
             <div class="card couture fond_bleu">
                 <h2 class="titre_card">Modèle de Couture 1</h2>
                 <div class="container">
-                    <div>
-                        <img class="fond_img" src="imgs/fond_noel.jpg" alt="costumes_de_Noël">
+                    <a href="archives-Paques.html"><div>
+                        <img class="fond_img" src="imgs/fond_noel.jpg" alt="costumes_de_Noël"></a>
                     </div>
                     <div class="description">
                         Lorem ipsum, dolor sit amet consectetur earum
@@ -279,8 +279,8 @@
             <div class="card tricot fond_bleu">
                 <h2 class="titre_card">Encore du tricot</h2>
                 <div class="container">
-                    <div>
-                        <img class="fond_img" src="imgs/fond_lapin_crochet.png" alt="lapin tricoté">
+                    <a href="le_lapin.html"><div>
+                        <img class="fond_img" src="imgs/fond_lapin_crochet.png" alt="lapin tricoté"></a>
                     </div>
                     <div class="description">
                         Lorem ipsum, dolor sit necessitatibus earum
@@ -311,8 +311,8 @@
             <div class="card couture fond_bleu">
                 <h2 class="titre_card">Modèle de Couture 2</h2>
                 <div class="container">
-                    <div>
-                        <img class="fond_img" src="imgs/fond_noel.jpg" alt="costumes_de_Noël">
+                    <a href="archives-Paques.html"><div>
+                        <img class="fond_img" src="imgs/fond_noel.jpg" alt="costumes_de_Noël"></a>
                     </div>
                     <div class="description">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, ratione.
