--- a/le_lapin.html
+++ b/le_lapin.html
@@ -49,9 +49,12 @@
     </header>
     <!------------------------------- Header end--------------------------------- -->
 
-
+    <div class="return"><a class="return_a" href="realisations.html" title="return"><img class="return_page" src="imgs/return_page.svg" alt=""></a> </div> 
     <!-----------------------------------Main---------------------------------------->
     <main>
+
+      
+
         <div class="title1">
             <h1>Le lapin en crochet</h1>
         </div>
@@ -155,7 +158,7 @@
         </section>
     </main>
 
-
+    <div class="return"><a class="return_a" href="realisations.html" title="return"><img class="return_page" src="imgs/return_page.svg" alt=""></a> </div> 
     <!--------------------------------------Main End---------------------------------------------->
     <footer>
         <div class="icons_footer">
