--- a/archives-Paques.html
+++ b/archives-Paques.html
@@ -42,8 +42,8 @@
                 <a href="index.html">Accueil</a>
                 <a href="realisations.html">Réalisations</a>
                 <a href="planning.html">Planning</a>
-                ' <a href="equipe.html">L'équipe</a>
-                ' <a href="contact.html">Contact</a>
+                <a href="equipe.html">L'équipe</a>
+                <a href="contact.html">Contact</a>
             </div>
         </nav>
     </header>
@@ -206,7 +206,7 @@
 
                 <div> 
                     <p class="name"> -Mark  </p>
-                    <p class="description"</p> >
+                    <p class="description"> 
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas dolorum deserunt est
                     provident
                     sapiente necessitatibus voluptatibus veniam asperiores assumenda fugiat</p>
