--- a/le_lapin.html
+++ b/le_lapin.html
@@ -42,8 +42,8 @@
                 <a href="index.html">Accueil</a>
                 <a href="realisations.html">Réalisations</a>
                 <a href="planning.html">Planning</a>
-                ' <a href="equipe.html">L'équipe</a>
-                ' <a href="contact.html">Contact</a>
+                <a href="equipe.html">L'équipe</a>
+                <a href="contact.html">Contact</a>
             </div>
         </nav>
     </header>
