--- a/planning.html
+++ b/planning.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <main>
+    <div class="wraper">
         <header>
             <div class="logo"><a href="index.html"><img src="imgs/logo.png" alt="Logo de Monsieur Couturier" /></a></div>
 
@@ -43,14 +43,14 @@
                     <a href="index.html">Accueil</a>
                     <a href="realisations.html">Réalisations</a>
                     <a href="planning.html">Planning</a>
-                    ' <a href="equipe.html">L'équipe</a>
-                    ' <a href="contact.html">Contact</a>
+                    <a href="equipe.html">L'équipe</a>
+                    <a href="contact.html">Contact</a>
                 </div>
             </nav>
         </header>
 
         <!-------------------------Table start---------------------------------->
-        <div class="wrapper">
+        <main>
             <div class="tb">
                 <table>
                     <tr class="first_row">
@@ -216,18 +216,23 @@
             <!-- <div class="vm_ev_future"><p>Evenements a venir</p><button>Noel</button></div>
             <div class="vm_ev_past"><p>Evenements passes</p><button>Halloween</button></div> -->
 
-        </div>
-    </main>
+        </main>
+
+        <footer>
+            <div class="icons_footer">
+                <img src="imgs/icons_instagram.png" alt="icône Instagram" />
+                <img src="imgs/icons_whatsapp.png" alt="icône Whatsapp" />
+                <img src="imgs/icons_facebook.png" alt="icône Facebook" />
+            </div>
+            <p class="text_footer">Conditions générales blablah</p>
+        </footer>
 
 
-    <footer>
-        <div class="icons_footer">
-            <img src="imgs/icons_instagram.png" alt="icône Instagram" />
-            <img src="imgs/icons_whatsapp.png" alt="icône Whatsapp" />
-            <img src="imgs/icons_facebook.png" alt="icône Facebook" />
-        </div>
-        <p class="text_footer">Conditions générales blablah</p>
-    </footer>
+
+    </div>
+
+
+    
 
 
 </body>
