détails couleurs et boutons

--- a/planning.html
+++ b/planning.html
@@ -139,15 +139,15 @@
                     </div>
                     <br>
 
-                    <div> <label for="Prenom">Prenom : </label><input name="prenom" id="prenom" type="text">
+                    <div> <label for="Prenom">Prénom : </label><input name="prenom" id="prenom" type="text">
                     </div>
                     <br>
 
-                    <div><Label for="email">Email : </Label><input name="email" id="email" type="email">
+                    <div><Label for="email">E-mail : </Label><input name="email" id="email" type="email">
                     </div>
                     <br>
 
-                    <div><label for="tel">Telephone : </label> <input name="tel" id="tel" type="tel">
+                    <div><label for="tel">Téléphone : </label> <input name="tel" id="tel" type="tel">
                     </div>
                     <br>
 
@@ -158,12 +158,12 @@
             <div class="aside_right">
 
                 <div class="ar1">
-                    <p>Nos prochains événements</p>
+                    <h2 class="aside_title">Nos prochains événements</h2>
                     <br>
                     <a href="evenements.html#event_noel" class="event_next">Du 5 au 23 decembre: Créations de Noël</a>
                 </div>
                 <div class="ar2">
-                    <p>Nos événements passés</p>
+                    <h2 class="aside_title">Nos événements passés</h2>
                     <a href="evenements.html#event_hallwn"class="event_last">Costumes d'Halloween</a>
                 </div>
             </div>
@@ -189,12 +189,12 @@
                 </div>
                 <div class="vm_jour">
                     <h2>Mercredi</h2>
-                    <button>14.00-18.00 <br> Tricot er Crochet</button>
+                    <button>14.00-18.00 <br> Tricot et Crochet</button>
                     <button>14.30-18.00 <br> Couture</button>
                 </div>
                 <div class="vm_jour">
                     <h2>Vendredi</h2>
-                    <button>14.00-18.00 <br> Tricor et Crochet</button>
+                    <button>14.00-18.00 <br> Tricot et Crochet</button>
                     <button>14.30-16.30 <br> Atelier enfant</button>
                     <button>16.30-18.00 <br> Couture</button>
                 </div>
@@ -204,10 +204,10 @@
             </div>
             <div class="vm_aside_top">
                 <div class="vm_last_event">
-                    <p>Evenements a venir</p><button>Noel</button>
+                    <p>Evénements à venir</p><button>Noël</button>
                 </div>
                 <div class="vm_next_event">
-                    <p>Evenements passes</p><button>Halloween</button>
+                    <p>Evénements passés</p><button>Halloween</button>
                 </div>
 
             </div>
